--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Doorverwijzen...</title>
 </head>
 <body>
-    <p>Je wordt doorgestuurd naar de hoofdpagina. Klik <a href="indocheck.html">hier</a> als de pagina niet automatisch laadt.</p>
+    <p>Je wordt doorgestuurd naar de hoofdpagina. Klik <a href="Indocheck.html">hier</a> als de pagina niet automatisch laadt.</p>
 </body>
+
 </html>
