--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=jouw_bestandsnaam.html">
+    <meta http-equiv="refresh" content="0; url=Indocheck.html">
     <title>Doorverwijzen...</title>
 </head>
 <body>
@@ -10,3 +10,4 @@
 </body>
 
 </html>
+
