--- a/Indocheck.html
+++ b/Indocheck.html
@@ -2,6 +2,7 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Indo Index Berekening</title>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
@@ -13,19 +14,21 @@
       color: #2F2F2F;
       max-width: 900px;
       margin: auto;
-      padding: 30px;
+      padding: 20px;
       line-height: 1.6;
+      font-size: 16px;
     }
     h1, h2 {
       text-align: center;
       color: #2F2F2F;
+      margin-bottom: 15px;
     }
     fieldset {
-      margin-bottom: 20px;
-      border-radius: 10px;
+      margin-bottom: 15px;
+      border-radius: 8px;
       border: 1px solid #8E6D4E;
-      padding: 15px 20px;
-      background: rgba(255,255,255,0.8);
+      padding: 12px 15px;
+      background: rgba(255,255,255,0.9);
     }
     legend {
       font-weight: bold;
@@ -33,19 +36,28 @@
     }
     label {
       display: block;
-      margin: 6px 0;
+      margin: 10px 0;
+      line-height: 1.4;
+      font-size: 16px;
+    }
+    input[type="checkbox"],
+    input[type="radio"] {
+      transform: scale(1.3);
+      margin-right: 8px;
     }
     button {
       display: inline-block;
-      margin: 20px 10px;
-      padding: 12px 24px;
+      margin: 15px 5px;
+      padding: 12px 18px;
       font-size: 16px;
-      border-radius: 6px;
+      border-radius: 8px;
       border: none;
       background: #8E6D4E;
       color: #fff;
       cursor: pointer;
       transition: background 0.3s;
+      width: 100%;
+      max-width: 250px;
     }
     button:hover {
       background: #4B3A2C;
@@ -55,13 +67,14 @@
       font-size: 18px;
       margin-top: 20px;
       font-weight: bold;
+      padding: 10px;
     }
     .progress-container {
       width: 100%;
       background-color: #ddd;
       border-radius: 20px;
       margin: 20px auto;
-      height: 25px;
+      height: 30px;
       overflow: hidden;
       border: 1px solid #4B3A2C;
     }
@@ -70,13 +83,13 @@
       width: 0%;
       background-color: #191970;
       text-align: center;
-      line-height: 25px;
+      line-height: 30px;
       color: white;
       font-weight: bold;
       transition: width 0.5s ease-in-out;
     }
     footer {
-      margin-top: 40px;
+      margin-top: 30px;
       padding: 15px;
       text-align: center;
       background: #4B3A2C;
@@ -85,13 +98,39 @@
       font-size: 14px;
     }
     #formulaBox {
-      margin: 20px auto;
+      margin: 15px auto;
       padding: 15px;
       background: #fff;
       border: 1px solid #8E6D4E;
       border-radius: 8px;
-      max-width: 400px;
       text-align: center;
+      font-size: 14px;
+    }
+
+    /* Kleine schermen */
+    @media (max-width: 600px) {
+      body {
+        font-size: 15px;
+        padding: 10px;
+      }
+      h1 {
+        font-size: 22px;
+      }
+      h2 {
+        font-size: 18px;
+      }
+      button {
+        font-size: 15px;
+        padding: 12px;
+        width: 100%;
+      }
+      .progress-container {
+        height: 25px;
+      }
+      .progress-bar {
+        line-height: 25px;
+        font-size: 14px;
+      }
     }
   </style>
 </head>
